# pose_estimation

./: CMakeLists.txt  README.md  demo.cpp
onnx_pose/: CMakeLists.txt  a.cpp  a.out  config.json  main.cpp  readme
onnx_pose/src/: CMakeLists.txt  MPPersonDet.cpp  MPPersonDet.h  MPPose.cpp  MPPose.h  processFrame.cpp  processFrame.h
python_rf/: CMakeLists.txt  frame_reader.cpp  log.txt  qt_pose.cpp  rf_onnx_search_param.py  rf_onxx.py
python_rf/onnx_csv/: .~lock.sağ_kol_combined.csv#  sağ_boyun_combined.csv  sağ_diz_combined.csv  sağ_kol_combined.csv  sol_boyun_combined.csv  sol_diz_combined.csv  sol_kol_combined.csv  squat_combined.csv  t_pose_combined.csv  yürüme_combined.csv  zombie_combined.csv
python_rf/tensorflow-csv/: sağ_bacak_eğik_combined.csv  sağ_boyuncombined.csv  sağ_diz_combined.csv  sağ_kol_combined.csv  sol_bacak_eğik_combined.csv  sol_boyun_combined.csv  sol_diz_combined.csv  sol_kol_combined.csv  squat_combined.csv  t_pose_combined.csv  yurume_combined.csv  zombie_combined.csv
